# double-ratchet-2

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl  deny.toml
.github/actions-rs/: grcov.yml
.github/workflows/: rust.yml
benches/: double_ratchet_bench.rs
src/: aead.rs  curve.rs  dh.rs  header.rs  kdf_chain.rs  kdf_root.rs  lib.rs  ratchet.rs
tests/: mod.rs
