[package]
name = "double-ratchet-2"
authors = ["Hannes Furmans"]
description = "Implementation of Double Ratchet as specified by Signal."
homepage = "https://github.com/Dione-Software/double-ratchet-2"
repository = "https://github.com/Dione-Software/double-ratchet-2"
readme = "README.md"
keywords = ["double-ratchet", "crypto", "cryptography", "signal"]
version = "0.4.0-pre.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
rand = "0.8.5"
rand_core = {version = "0.6"}
getrandom = {version = "0.2.3"}
hkdf = "0.12"
hmac = "0.12.1"
aes-gcm-siv = {version = "0.11.0-pre.1"}
sha2 = {version = "0.10"}
serde = {version = "1", default-features = false, features = ["derive"]}
serde_bytes = "0.11"
bincode = "1"
hashbrown = {version = "0.12", features = ["serde"]}
zeroize = {version = "1.3", features = ["zeroize_derive"]}
x25519-dalek = { version = "2.0.0-pre.1", features = ["serde"] }
typetag = "0.2.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3" 

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "double_ratchet_bench"
harness = false

[features]
wasm = ["getrandom/js"]
