[package]
name = "double-ratchet-2"
authors = ["Hannes Furmans"]
description = "Implementation of Double Ratchet as specified by Signal."
homepage = "https://github.com/Dione-Software/double-ratchet-2"
repository = "https://github.com/Dione-Software/double-ratchet-2"
readme = "README.md"
keywords = ["double-ratchet", "crypto", "cryptography", "signal"]
version = "0.3.7"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
p256 = {version = "0.10", features = ["ecdh", "arithmetic", "pem", "jwk"]}
rand_core = {version = "0.6"}
getrandom = {version = "0.2.8"}
hkdf = "0.12"
hmac = "0.12"
aes-gcm-siv = {version = "0.10.3"}
sha2 = {version = "0.10"}
serde = {version = "1", default-features = false, features = ["derive"]}
serde_bytes = "0.11"
bincode = "1"
hashbrown = {version = "0.13", features = ["serde"]}
zeroize = {version = "1.3", features = ["zeroize_derive"]}

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "double_ratchet_bench"
harness = false

[profile.release]
lto = true

[features]
wasm = ["getrandom/js"]
